# AutoCheckin-Next

./: README.md
.github/workflows/: publish.yml
autocheckin-next/: README.md  package-lock.json  package.json  tailwind.config.js
autocheckin-next/src/: App.tsx  i18n.ts  index.css  main.tsx
autocheckin-next/src-tauri/: Cargo.toml  tauri.conf.json
autocheckin-next/src-tauri/src/: auth.rs  config.rs  lib.rs  main.rs  scheduler.rs  task.rs
autocheckin-next/src/components/: LocationDialog.tsx  LoginDialog.tsx  Settings.tsx  TaskDialog.tsx  Tasks.tsx
