[package]
name = "autocheckin-next"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autocheckin_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json", "blocking", "cookies"] }
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.29"
env_logger = "0.11.8"
tauri-plugin-shell = "2.3.3"
qrcode = "0.14.1"
base64 = "0.22.1"
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-store = "2.4.1"
tauri-plugin-log = "2.7.1"
tauri-plugin-notification = "2.3.3"
regex = "1.12.2"
image = "0.25.9"
